--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,12 @@ android {
             useSupportLibrary true
         }
 
-        buildConfigField("String", "TMDB_BASE_URL", '"https://api.themoviedb.org/3/"')
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file("local.properties").newDataInputStream())
+
+        buildConfigField("String", "API_KEY", "\"${properties.getProperty("API_KEY")}\"")
+        buildConfigField("String", "API_BASE_URL", '"https://api.themoviedb.org/3/"')
+        buildConfigField("String", "API_IMAGES_BASE_URL", '"https://image.tmdb.org/t/p/"')
     }
 
     buildTypes {
