--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,9 @@ dependencies {
     // Refresh
     implementation "com.google.accompanist:accompanist-swiperefresh:0.23.1"
 
+    // System Ui
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.23.1"
+
     // Hilt
     implementation 'com.google.dagger:hilt-android:2.43.2'
     kapt "com.google.dagger:hilt-android-compiler:2.43.2"
